# gymcenter-server

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rocket.toml  rocket.toml.example  schema.sql
.github/workflows/: release.yml
src/: course.rs  depend.rs  main.rs  notice.rs  reg.rs  user.rs  utils.rs
src/course/: lib.rs  mod.rs
src/depend/: lib.rs  mod.rs
src/notice/: mod.rs
src/user/: lib.rs  mod.rs
