[package]
name = "gymcenter-server"
version = "0.1.0"
edition = "2021"
authors = ["MerCuJerry <mercujerry@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
rocket = { version = "=0.5.0", features = ["json", "secrets"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }