[package]
name = "gymcenter-server"
version = "0.1.2"
edition = "2021"
authors = ["MerCuJerry <mercujerry@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "=0.15.7"
rocket = { version = "=0.5.0", features = ["json", "secrets"] }
sqlx = { version = "=0.7.3", features = ["runtime-tokio", "mysql"] }
sha2 = { version = "=0.10.8"}
base64ct = { version = "=1.6.0"}